Add deployment configuration